# green-spatial-engineering

./: .gitignore  README.md  pyproject.toml
data/: readme.txt
doc/: readme.txt
lib/: readme.txt
notebooks/: AgentPositions.ipynb  Code Carbon.ipynb  Common Practices.ipynb  TestNotebook.ipynb  UrbanDigitalTwin.ipynb  arcpy_demo.ipynb  readme.txt
notebooks/.ipynb_checkpoints/: AgentPositions-checkpoint.ipynb  CarbonEmissions-checkpoint.ipynb
scripts/: readme.txt
src/: bugfix.py  main.py  readme.txt  spatial_analysis.py  testing.py  track_all.py  track_measure.py  track_patterns.py  track_read.py
src/measure/: tools.py
src/patterns/: tools.py
src/spatialcarbon/: data.py  experiment.py
src/traffic/: calculate.py  read.py  vehicle.py
tools/: greenspatial.DetectPatternsTool.pyt.xml  greenspatial.pyt  greenspatial.pyt.xml
